Fix #114053: Sculpt visibility broken after undo

Caused by 3e81f6699808b572c5e0, The `BLI_BITMAP_TEST` macro
is very flexible and seems to compile with `BitVector` as well.